# chainer_wrapper_cpp

./: CMakeLists.txt  README.md  main.cpp  mymodel0617.npz  predict_wl.py
